[package]
name = "insert-only-set"
version = "0.2.0"
authors = ["Christian Koopmann <c.k.e.koopmann@gmail.com>"]
edition = "2021"
description = "A procedural macro to generate insert-only sets from enums"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ckoopmann/insert-only-set"
homepage = "https://github.com/ckoopmann/insert-only-set"
documentation = "https://docs.rs/insert-only-set"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
